--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1><a class="title" href="homepage.html">BlackHole Scans</a></h1>
+    <h1><a class="title" href="index.html">BlackHole Scans</a></h1>
     <div class="support-us">
       <div class="container c-container">
         <div class="row c-row">
@@ -113,6 +113,6 @@
       </div>
     </div>
 
-    <script src="../js/homepage_js.js"></script>
+    <script src="../js/index_js.js"></script>
   </body>
 </html>
