--- a/html/TenseiSaki.html
+++ b/html/TenseiSaki.html
@@ -8,9 +8,9 @@
     <title>That Time I Got Reincarnated as a Disappointing Prince</title>
   </head>
   <body>
-    <h1><a class="title" href="index.html">BlackHole Scans</a></h1>
+    <h1><a class="title" href="../index.html">BlackHole Scans</a></h1>
     <div class="container c-container">
-      <a class="no-underline" href="../html/index.html">Home</a> /
+      <a class="no-underline" href="../index.html">Home</a> /
       <a class="no-underline" href="../html/TenseiSaki.html"
         >That Time I Got Reincarnated as a Disappointing Prince</a
       >
