--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/resources/bootStrapStyles.css" />
-    <link rel="stylesheet" href="/css/homepage_css.css" />
+    <link rel="stylesheet" href="resources/bootStrapStyles.css" />
+    <link rel="stylesheet" href="css/homepage_css.css" />
     <title>Document</title>
   </head>
   <body>
@@ -30,12 +30,12 @@
                   </h5>
                   <p>
                     <a
-                      href="/html/donate.html/"
+                      href="html/TenseiSaki.html"
                       target="_blank"
                       rel="noopener"
                       ><img
                         decoding="async"
-                        src="/images/WOSDonate.png"
+                        src="images/WOSDonate.png"
                         data-src="./images/WOSDonate.png"
                         alt="Patreon"
                         data-was-processed="true"
@@ -56,7 +56,7 @@
             <div class="col-md-5">
               <div class="image-div">
                 <img
-                  src="/images/That Time I Got Reincarnated as a Disappointing Prince/That Time I Got Reincarnated as a Disappointing Prince.jpg"
+                  src="images/That Time I Got Reincarnated as a Disappointing Prince/That Time I Got Reincarnated as a Disappointing Prince.jpg"
                   alt="That Time I Got Reincarnated as a Disappointing Prince"
                   width="180"
                 />
@@ -64,7 +64,7 @@
             </div>
             <div class="col-md-7">
               <div class="title">
-                <a class="no-underline" href="/html/TenseiSaki.html">
+                <a class="no-underline" href="html/TenseiSaki.html">
                   That Time I Got Reincarnated as a Disappointing Prince
                 </a>
               </div>
@@ -73,7 +73,7 @@
                   <span class="chapter">
                     <a
                       class="no-underline"
-                      href="/html/TenseiSaki/Chapter-01.html"
+                      href="html/TenseiSaki/Chapter-01.html"
                       class="btn-link"
                     >
                       Chapter 1
@@ -83,7 +83,7 @@
                 </div>
                 <!-- <div class="chapters">
                   <span class="chapter">
-                    <a class="no-underline" href="/html/#" class="btn-link">
+                    <a class="no-underline" href="html/#" class="btn-link">
                       Chapter 1
                     </a>
                   </span>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="chapters">
                   <span class="chapter">
-                    <a class="no-underline" href="/html/#" class="btn-link">
+                    <a class="no-underline" href="html/#" class="btn-link">
                       Chapter 1
                     </a>
                   </span>
@@ -113,6 +113,6 @@
       </div>
     </div>
 
-    <script src="/js/index_js.js"></script>
+    <script src="js/index_js.js"></script>
   </body>
 </html>
