--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </a>
               </div>
               <div class="chapter-list">
-                <div class="chapters">
+                <!-- <div class="chapters">
                   <span class="chapter">
                     <a
                       class="no-underline"
@@ -80,7 +80,7 @@
                     </a>
                   </span>
                   <span> 21 seconds ago</span>
-                </div>
+                </div> -->
                 <!-- <div class="chapters">
                   <span class="chapter">
                     <a class="no-underline" href="html/#" class="btn-link">
