--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="resources/bootStrapStyles.css" />
     <link rel="stylesheet" href="css/homepage_css.css" />
-    <title>Document</title>
+    <title>BlackHole Scans</title>
   </head>
   <body>
     <h1><a class="title" href="index.html">BlackHole Scans</a></h1>
