Updation of files

--- a/html/That Time I Got Reincarnated as a Disappointing Prince.html
+++ b/html/That Time I Got Reincarnated as a Disappointing Prince.html
@@ -11,14 +11,14 @@
     <h1><a class="title" href="../index.html">BlackHole Scans</a></h1>
     <div class="container c-container">
       <a class="no-underline" href="../index.html">Home</a> /
-      <a class="no-underline" href="../html/TenseiSaki.html"
+      <a class="no-underline" href="../html/That Time I Got Reincarnated as a Disappointing Prince.html"
         >That Time I Got Reincarnated as a Disappointing Prince</a
       >
       <h3>That Time I Got Reincarnated as a Disappointing Prince</h3>
       <div class="details">
         <div class="row">
           <div class="col-md-2 center translucent">
-            <a class="no-underline" href="../html/TenseiSaki.html">
+            <a class="no-underline" href="../html/That Time I Got Reincarnated as a Disappointing Prince.html">
               <img
                 src="../images/That Time I Got Reincarnated as a Disappointing Prince/That Time I Got Reincarnated as a Disappointing Prince.jpg"
                 alt="That Time I Got Reincarnated as a Disappointing Prince"
