--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   </h5>
                   <p>
                     <a
-                      href="html/TenseiSaki.html"
+                      href="html/That Time I Got Reincarnated as a Disappointing Prince.html"
                       target="_blank"
                       rel="noopener"
                       ><img
@@ -64,7 +64,7 @@
             </div>
             <div class="col-md-7">
               <div class="title">
-                <a class="no-underline" href="html/TenseiSaki.html">
+                <a class="no-underline" href="html/That Time I Got Reincarnated as a Disappointing Prince.html">
                   That Time I Got Reincarnated as a Disappointing Prince
                 </a>
               </div>
@@ -73,7 +73,7 @@
                   <span class="chapter">
                     <a
                       class="no-underline"
-                      href="html/TenseiSaki/Chapter-01.html"
+                      href="html/That Time I Got Reincarnated as a Disappointing Prince/Chapter-01.html"
                       class="btn-link"
                     >
                       Chapter 1
