Updation of files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="resources/bootStrapStyles.css" />
     <link rel="stylesheet" href="css/homepage_css.css" />
     <title>BlackHole Scans</title>
+    <meta property="og:image" content="images/Logo.png" />
+    <meta property="og:site_name" content="BlackHole Scans" />
+    <meta property="og:locale" content="en_IN" />
   </head>
   <body>
     <h1><a class="title" href="index.html">BlackHole Scans</a></h1>
@@ -64,7 +67,10 @@
             </div>
             <div class="col-md-7">
               <div class="title">
-                <a class="no-underline" href="html/That Time I Got Reincarnated as a Disappointing Prince.html">
+                <a
+                  class="no-underline"
+                  href="html/That Time I Got Reincarnated as a Disappointing Prince.html"
+                >
                   That Time I Got Reincarnated as a Disappointing Prince
                 </a>
               </div>
