Update of files

--- a/html/That Time I Got Reincarnated as a Disappointing Prince.html
+++ b/html/That Time I Got Reincarnated as a Disappointing Prince.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../images/Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../resources/bootStrapStyles.css" />
     <link rel="stylesheet" href="../css/manga.css" />
     <title>That Time I Got Reincarnated as a Disappointing Prince</title>
@@ -14,7 +15,7 @@
       <a class="no-underline" href="../html/That Time I Got Reincarnated as a Disappointing Prince.html"
         >That Time I Got Reincarnated as a Disappointing Prince</a
       >
-      <h3>That Time I Got Reincarnated as a Disappointing Prince</h3>
+      <h3 class="outlined-text">That Time I Got Reincarnated as a Disappointing Prince</h3>
       <div class="details">
         <div class="row">
           <div class="col-md-2 center translucent">
@@ -107,14 +108,24 @@
               </div>
               <div class="row pt-4">
                 <div class="col-2">
-                  <button type="button" class="btn btn-danger">
-                    Read First
-                  </button>
+                  <a
+                    class="no-underline"
+                    href="That Time I Got Reincarnated as a Disappointing Prince/Chapter 01.html"
+                  >
+                    <button type="button" class="btn btn-danger">
+                      Read First
+                    </button>
+                  </a>
                 </div>
                 <div class="col-2">
+                  <a
+                    class="no-underline"
+                    href="That Time I Got Reincarnated as a Disappointing Prince/Chapter 01.html"
+                  >
                   <button type="button" class="btn btn-danger">
                     Read Last
                   </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -140,6 +151,13 @@
               Prince's struggle to lose weight!
             </p>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="container c-container">
+      <div class="chapter-list">
+        <div class="row translucent">
+          <div class="header">Chapters</div>
         </div>
       </div>
     </div>
