--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="images/Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="resources/bootStrapStyles.css" />
     <link rel="stylesheet" href="css/homepage_css.css" />
     <title>BlackHole Scans</title>
-    <meta property="og:image" content="images/Logo.png" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/AnshumanSarkar2001/BlackHoleScans/main/images/Logo.png"
+    />
     <meta property="og:site_name" content="BlackHole Scans" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="256" />
+    <meta property="og:image:height" content="256" />
     <meta property="og:locale" content="en_IN" />
+    
   </head>
   <body>
     <h1><a class="title" href="index.html">BlackHole Scans</a></h1>
@@ -75,18 +83,18 @@
                 </a>
               </div>
               <div class="chapter-list">
-                <!-- <div class="chapters">
+                <div class="chapters">
                   <span class="chapter">
                     <a
                       class="no-underline"
-                      href="html/That Time I Got Reincarnated as a Disappointing Prince/Chapter-01.html"
+                      href="html/That Time I Got Reincarnated as a Disappointing Prince/Chapter 01.html"
                       class="btn-link"
                     >
                       Chapter 1
                     </a>
                   </span>
-                  <span> 21 seconds ago</span>
-                </div> -->
+                  <span> 21st Oct 2023</span>
+                </div>
                 <!-- <div class="chapters">
                   <span class="chapter">
                     <a class="no-underline" href="html/#" class="btn-link">
