upadtion of files

--- a/html/That Time I Got Reincarnated as a Disappointing Prince.html
+++ b/html/That Time I Got Reincarnated as a Disappointing Prince.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../images/Logo.png" type="image/x-icon">
+    <link rel="icon" href="../images/Logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="../resources/bootStrapStyles.css" />
     <link rel="stylesheet" href="../css/manga.css" />
     <title>That Time I Got Reincarnated as a Disappointing Prince</title>
@@ -12,18 +12,26 @@
     <h1><a class="title" href="../index.html">BlackHole Scans</a></h1>
     <div class="container c-container">
       <a class="no-underline" href="../index.html">Home</a> /
-      <a class="no-underline" href="../html/That Time I Got Reincarnated as a Disappointing Prince.html"
+      <a
+        class="no-underline"
+        href="../html/That Time I Got Reincarnated as a Disappointing Prince.html"
         >That Time I Got Reincarnated as a Disappointing Prince</a
       >
-      <h3 class="outlined-text">That Time I Got Reincarnated as a Disappointing Prince</h3>
+      <h3 class="outlined-text">
+        That Time I Got Reincarnated as a Disappointing Prince
+      </h3>
       <div class="details">
         <div class="row">
           <div class="col-md-2 center translucent">
-            <a class="no-underline" href="../html/That Time I Got Reincarnated as a Disappointing Prince.html">
+            <a
+              class="no-underline"
+              href="../html/That Time I Got Reincarnated as a Disappointing Prince.html"
+            >
               <img
                 src="../images/That Time I Got Reincarnated as a Disappointing Prince/That Time I Got Reincarnated as a Disappointing Prince.jpg"
                 alt="That Time I Got Reincarnated as a Disappointing Prince"
-                width="180"
+                class="main-image"
+                width="100%"
               />
             </a>
           </div>
@@ -51,7 +59,7 @@
                         That Time I Got Reincarnated as a Disappointing Prince:
                         Right Now I Can't Even Do One Sit-up, but I'll Try to
                         Lose Weight and Save the World, Reincarnated as a
-                        Disappointing Prince&#U+～I can't do a single sit-up now,
+                        Disappointing Prince～I can't do a single sit-up now,
                         but I'm going to lose weight and save another world～,
                       </td>
                     </tr>
@@ -100,7 +108,7 @@
                       href="https://gaugau.futabanet.jp/list/work/5e95b29a77656177aa040000"
                     >
                       <button type="button" class="btn btn-warning button">
-                        Official Raw&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        Official Raw
                       </button>
                     </a>
                   </div>
@@ -122,9 +130,9 @@
                     class="no-underline"
                     href="That Time I Got Reincarnated as a Disappointing Prince/Chapter 01.html"
                   >
-                  <button type="button" class="btn btn-danger">
-                    Read Last
-                  </button>
+                    <button type="button" class="btn btn-danger">
+                      Read Last
+                    </button>
                   </a>
                 </div>
               </div>
@@ -134,7 +142,7 @@
       </div>
     </div>
     <div class="container c-container">
-      <div class="chapter-list">
+      <div class="summary">
         <div class="row translucent">
           <div class="header">Summary</div>
           <div class="summary py-4">
@@ -158,6 +166,114 @@
       <div class="chapter-list">
         <div class="row translucent">
           <div class="header">Chapters</div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="py-4">
+                <a
+                  class="no-underline chapter p-2"
+                  href="That Time I Got Reincarnated as a Disappointing Prince/Chapter 01.html"
+                >
+                  Chapter 01
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="py-4">
+                <a
+                  class="no-underline chapter p-2"
+                  href="That Time I Got Reincarnated as a Disappointing Prince/Chapter 02.html"
+                >
+                  Chapter 02
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="py-4">
+                <a
+                  class="no-underline chapter p-2"
+                  href="That Time I Got Reincarnated as a Disappointing Prince/Chapter 03.html"
+                >
+                  Chapter 03
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="py-4">
+                <a
+                  class="no-underline chapter p-2"
+                  href="That Time I Got Reincarnated as a Disappointing Prince/Chapter 04.html"
+                >
+                  Chapter 04
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="py-4">
+                <a
+                  class="no-underline chapter p-2"
+                  href="That Time I Got Reincarnated as a Disappointing Prince/Chapter 05.html"
+                >
+                  Chapter 05
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="py-4">
+                <a
+                  class="no-underline chapter p-2"
+                  href="That Time I Got Reincarnated as a Disappointing Prince/Chapter 06.html"
+                >
+                  Chapter 06
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="py-4">
+                <a
+                  class="no-underline chapter p-2"
+                  href="That Time I Got Reincarnated as a Disappointing Prince/Chapter 07.html"
+                >
+                  Chapter 07
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="py-4">
+                <a
+                  class="no-underline chapter p-2"
+                  href="That Time I Got Reincarnated as a Disappointing Prince/Chapter 08.html"
+                >
+                  Chapter 08
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="py-4">
+                <a
+                  class="no-underline chapter p-2"
+                  href="That Time I Got Reincarnated as a Disappointing Prince/Chapter 09.html"
+                >
+                  Chapter 09
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="py-4">
+                <a
+                  class="no-underline chapter p-2"
+                  href="That Time I Got Reincarnated as a Disappointing Prince/Chapter 10.html"
+                >
+                  Chapter 10
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
