--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="images/Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="resources/bootStrapStyles.css" />
-    <link rel="stylesheet" href="css/homepage_css.css" />
+    <link rel="stylesheet" href="css/homepage.css" />
     <title>BlackHole Scans</title>
     <meta
       property="og:image"
